# core_rs_workspace

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml  codeql.yml  docker.yml  rust.yml
app/benchmark/: Cargo.toml  test.json
app/benchmark/benches/: json_bench.rs
app/demo/: Cargo.toml
app/demo/assets/web/: index.html
app/demo/assets/web/static/css/: index.css
app/demo/examples/: error.rs  http.rs  kafak_consumer.rs  kafka_producer.rs  scheduler.rs  test.rs
app/demo/src/: main.rs  web.rs
app/log-exporter/: Cargo.toml
app/log_collector/: Cargo.toml  Dockerfile
app/log_collector/assets/: conf.json
app/log_collector/src/: kafka.rs  main.rs  web.rs
app/log_exporter/: Cargo.toml  Dockerfile
app/log_exporter/assets/: conf.json
app/log_exporter/conf/: conf.json
app/log_exporter/conf/dev/: conf.json
app/log_exporter/examples/: action_log.rs  error.rs  http.rs  kafak_consumer.rs  kafka_producer.rs  lock_free.rs  scheduler.rs  test.rs
app/log_exporter/src/: job.rs  kafka.rs  main.rs  service.rs  web.rs
app/log_exporter/src/kafka/: action_log_handler.rs  event_handler.rs
app/log_exporter/src/web/: upload.rs
app/log_processor/: Cargo.toml  Dockerfile
app/log_processor/assets/: conf.json  kibana_objects.json
app/log_processor/assets/index/: action-index-template.json  event-index-template.json  stat-index-template.json  trace-index-template.json
app/log_processor/src/: elasticsearch.rs  job.rs  kafka.rs  kibana.rs  main.rs  opensearch.rs
app/log_processor/src/kafka/: action_log_handler.rs  event_handler.rs  stat_handler.rs
docker/opensearch/: docker-compose.yml
docker/opensearch/dashboards/: Dockerfile  opensearch_dashboards.yml
docker/opensearch/opensearch/: Dockerfile
docker/redpanda/: docker-compose.yml
etc/: consumer.rs
lib/core_ng/: Cargo.toml
lib/core_ng/src/: action.rs  conf.rs  error.rs  exception.rs  http.rs  http_client.rs  json.rs  kafka.rs  lib.rs  log.rs  schedule.rs  shell.rs  shutdown.rs  task.rs  time.rs
lib/core_ng/src/fs/: path.rs
lib/core_ng/src/kafka/: consumer.rs  producer.rs
lib/core_ng/src/log/: appender.rs  layer.rs
lib/core_ng/src/web/: error.rs  server.rs
lib/framework/: Cargo.toml
lib/framework/src/: asset.rs  env.rs  exception.rs  fs.rs  http.rs  json.rs  lib.rs  log.rs  schedule.rs  shell.rs  shutdown.rs  web.rs
lib/framework/src/exception/: error_code.rs
lib/framework/src/fs/: path_buf.rs
lib/framework/src/kafka/: consumer.rs  producer.rs  topic.rs
lib/framework/src/log/: appender.rs  id_generator.rs  layer.rs
lib/framework/src/schedule/: trigger.rs
lib/framework/src/web/: body.rs  client_info.rs  error.rs  server.rs  site.rs  site_directory.rs
lib/framework/src/web/site/: site_manager.rs  web_directory.rs
