[workspace]
resolver = "3"
members = ["app/*", "lib/*"]

[workspace.dependencies]
framework = { path = "lib/framework" }

tracing = "*"
serde = { version = "*", features = ["derive"] }

tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["macros"] }
axum-extra = { version = "*", features = ["cookie"] }
reqwest = { version = "*", default-features = false, features = [
    "stream",
    "rustls-tls",
] }

rdkafka = { version = "*", default-features = false, features = [
    "dynamic-linking",
    "tokio",
    "zstd",
] }

uuid = { version = "*", features = ["v7"] }
chrono = { version = "*", features = ["serde"] }


# [profile.release]
# debug = "line-tables-only"
# opt-level = 3
