[workspace]
resolver = "3"
members = ["app/*", "lib/*"]

[workspace.dependencies]
framework = { path = "lib/framework", features = ["kafka"] }

tracing = "*"
serde = { version = "*", features = ["derive"] }

tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["macros"] }
chrono = { version = "*", features = ["serde"] }


# [profile.release]
# debug = "line-tables-only"
# opt-level = 3
