[package]
name = "log_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
core_ng.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
rdkafka.workspace = true
