[package]
name = "log_exporter"
version = "0.2.0"
edition = "2024"

[dependencies]
framework.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
rdkafka.workspace = true
chrono.workspace = true
reqwest.workspace = true

hostname = "*"
sha2 = "*"
url = "*"
