[package]
name = "framework"
version = "0.1.1"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
axum.workspace = true
axum-server.workspace = true
rdkafka.workspace = true

futures.workspace = true
bytes.workspace = true
chrono.workspace = true
uuid.workspace = true
indexmap.workspace = true
