[package]
name = "framework"
version = "0.3.1"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber = "*"

serde.workspace = true
serde_json = "*"

tokio.workspace = true
tokio-util = { version = "*", features = ["rt"] }

axum.workspace = true
axum-extra.workspace = true
axum-server = { version = "*", features = ["tls-rustls"] }
http-body-util = "*"

reqwest.workspace = true

rdkafka.workspace = true

chrono.workspace = true
uuid.workspace = true

futures = "*"
bytes = "*"
base64 = "*"
bs58 = "*"
indexmap = { version = "*", features = ["serde"] }
