[package]
name = "framework"
version = "0.3.1"
edition = "2024"

[dependencies]
tracing.workspace = true
tracing-subscriber = "*"

serde.workspace = true
serde_json = "*"

tokio.workspace = true
tokio-util = { version = "*", features = ["rt"] }

http = "*"
axum.workspace = true
axum-extra = { version = "*", features = ["cookie"] }
axum-server = { version = "*", features = ["tls-rustls"] }
tower-http = {version ="*", features = ["fs"]}

reqwest.workspace = true

rdkafka.workspace = true

chrono.workspace = true
uuid.workspace = true

futures = "*"
bytes = "*"
base64 = "*"
bs58 = "*"
indexmap = { version = "*", features = ["serde"] }
